# FNAF-VR-DEMO

./: .clang-format  .gitignore  CMakeLists.txt  FNAF-OpenXr.sln  README.md  create_symbolic_link(admin).bat
Configs/: bunny_hide_pos.json  death_pos.json  game_logic_config.json  game_logic_config_GL.json  game_logic_config_VR.json  light_position_ini.json  vr_ini_config.json
Core/: Aabb.cpp  AttriblessRendering.h  Buffer.cpp  ComputeShader.cpp  ComputeShader.h  ComputeTests.h  DebugCallback.cpp  Fbo.h  ImageTexture.cpp  InitShader.cpp  InitShader.h  LoadMesh.h  LoadTexture.cpp  LoadTexture.h  MeshBase.cpp  MeshBase.h  RaytraceGrid.cpp  ReductionPattern.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderInclude.hpp  SparseMatrix.h  StdUniforms.cpp  StdUniforms.h  Timer.cpp  Timer.h  VrPointer.h  imgui_impl_vr.cpp  imgui_impl_vr.h  iq.cpp  iq.h
FNAF-VR-DEMO/: AIComponent.h  AnimeMesh.h  CMakeLists.txt  DrawGui.cpp  DrawGui.h  FNAF-VR-DEMO.vcxproj  FNAF-VR-DEMO.vcxproj.filters  Game.cpp  Game.h  GlfwCallbacks.cpp  GlfwCallbacks.h  GlfwWindow.cpp  GlfwWindow.h  Pawn.cpp  Pawn.h  Scene.cpp  Scene.h  SkinnedMesh.h  XrCallbacks.cpp  XrCallbacks.h
FNAF-VR-DEMO/assets/: cube.glb  oculus_touch_controller_left.glb  oculus_touch_controller_right.glb  sphere.glb  vive_controller.glb
FNAF-VR-DEMO/shaders/: aabb_cs.h.glsl  area_constraint_fs.glsl  bend_constraint_gs.glsl  dist_constraint_gs.glsl  ground_fs.glsl  ground_vs.glsl  gui_vs.glsl  image_reduce_3d_cs.glsl  intersect_cs.h.glsl  phong_fs.glsl  phong_vs.glsl  pointer_vs.glsl  raytrace_octree_grid_3d_vs.glsl  rotary_actuator_gs.glsl  skinning.frag  skinning.vert  std_uniforms.h.glsl  template.vert  template_fs.glsl  template_vs.glsl  trace_fs.glsl  trace_vs.glsl  xpbd3d_fs.glsl  xpbd_constraint_ugrid_cs.glsl  xpbd_linear_constraint_cs.glsl  xpbd_plane_fs.glsl  xpbd_static_planar_constraint_cs.glsl
lib/Debug/: kaldi-native-fbank-core.lib  libz.lib  libzip.lib  openxr-gfxwrapper.lib
lib/Release/: kaldi-native-fbank-core.lib  libz.lib  libzip.lib  openxr-gfxwrapper.lib  openxr_loader.lib
shaders/: anime_mesh.frag  anime_mesh.vert  area_constraint_vs.glsl  bend_constraint_fs.glsl  bend_constraint_vs.glsl  brushes_cs.h.glsl  dist_constraint_fs.glsl  dist_constraint_vs.glsl  generate_grid_3d_cs.glsl  grid_3d_cs.h.glsl  grid_fs.glsl  grid_vs.glsl  gui_fs.glsl  outline_fs.glsl  outline_vs.glsl  picking.h.glsl  picking_cs.h.glsl  pointer_fs.glsl  prefix_sum_cs.glsl  raytrace_octree_grid_3d_cs.glsl  raytrace_octree_grid_3d_fs.glsl  rotary_actuator_fs.glsl  rotary_actuator_vs.glsl  skinned_mesh.frag  skinned_mesh.vert  skinning.frag  static_mesh.frag  static_mesh.vert  title_mesh.frag  title_mesh.vert  trace_gs.glsl  uniform_grid_xpbd_3d_cs.glsl  xpbd3d_vs.glsl  xpbd_area_constraint_gs_cs.glsl  xpbd_bend_constraint_gs_cs.glsl  xpbd_cs.h.glsl  xpbd_dist_constraint_gs_cs.glsl  xpbd_linear_actuator_cs.glsl  xpbd_planar_constraint_cs.glsl  xpbd_plane_vs.glsl  (+3 more)
src/Core/: AttriblessRendering.cpp  Buffer.h  ComputePattern.cpp  ComputePattern.h  Fbo.cpp  GlEnumToString.cpp  GlEnumToString.h  GroundPlane.cpp  GroundPlane.h  ImageTexture.h  InitShader.cpp  LoadMesh.cpp  LoadMesh.h  LoadTexture.cpp  MeshBase.h  Module.cpp  Module.h  RaytraceGrid.h  ReductionPattern.h  Renderer.cpp  Serialize.cpp  Serialize.hpp  Shader.cpp  Shader.h  Timer.cpp  UniformGrid.cpp  UniformGrid.h  UniformGui.cpp  UniformGui.h  VrPointer.cpp
src/FNAF-GL-DEMO/: CMakeLists.txt  main.cpp
src/FNAF-GL-DEMO/DemoGL/: Camera.h  GlfwCallbacks.cpp  Scene.cpp  Scene.h
src/FNAF-Game/Game/: CameraInterface.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  GlobalObjects.h  JsonConfig.cpp  JsonConfig.h
src/FNAF-Game/Game/Configs/: config1.json  config2.json  config_vr.json
src/FNAF-Game/Objects/: AIComponent.cpp  AnimeMesh.cpp  AnimeMesh.h  EventComponent.cpp  EventComponent.h  EventManager.cpp  EventManager.h  LightManager.cpp  LightManager.h  MeshBase.cpp  MeshBase.h  Pawn.cpp  Pawn.h  SkinnedMesh.cpp  SkinnedMesh.h  StaticMesh.cpp  StaticMesh.h  TitleMesh.cpp  TitleMesh.h
src/FNAF-Game/Window/: DebugDraw.cpp  DebugDraw.h  DrawGui.cpp  DrawGui.h  GlfwCallbacks.h  GlfwWindow.cpp  GlfwWindow.h
src/FNAF-VR-DEMO/: CMakeLists.txt  FNAF-VR-DEMO.vcxproj  FNAF-VR-DEMO.vcxproj.filters
src/FNAF-VR-DEMO/VR/: Camera.h  GlfwCallbacks.cpp  Scene.cpp  Scene.h  XrCallbacks.cpp
src/FNAF-VR-DEMO/xr_core/: graphicsplugin.h  graphicsplugin_opengl.cpp  openxr_program.cpp  pch.h
xr_common/: gfxwrapper_opengl.h
xr_core/: graphicsplugin_opengl.cpp  graphicsplugin_vulkan.cpp  logger.cpp  openxr_program.cpp
